--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+.hero{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+img{
+	width: 500px;
+	height: 200px;
+	border-radius: 5px;
+	object-fit: cover;
+	margin: 30px;
+}
+button{
+	background-color: red;
+	color: white;
+	border-radius: 5px;
+}
+.btn{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
